# django_demo

./: .gitignore  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/static/blog/css/: style.css
blog/templates/blog/: base.html  detail.html  list.html  post_confirm_delete.html  post_create_form.html  post_update_form.html  post_user_list.html
blog_api/: serializers.py  urls.py  views.py
project/: settings.py  urls.py
user/: backends.py  forms.py  models.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_author.py
user/templates/: base.html
user/templates/user/: base.html  login.html  register.html
