[tool.poetry]
name = "django_blog"
version = "0.1.0"
description = ""
authors = ["Jack Cheng <jack.cheng@zerologix.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.6"
mysqlclient = "^2.1.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
django-crispy-forms = "^1.14.0"
redis = "^4.3.4"
djlint = "^1.9.4"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
